2007-03-17	tsch

	* Cairo.xs
	* t/Cairo.t: Wrap cairo_get_scaled_font.

	* CairoSurface.xs
	* t/CairoSurface.t: Re-add the binding for cairo_surface_finish.
	It was orignally removed because its effect can also be achieved
	by destroying the surface or letting it go out of scope.  But
	Oleksandr Alex Protasenko convinced me that it's still a good idea
	to have it anyway, mainly for paginated surfaces like PDF and PS
	which defer rendering as long as they can.  With $surf->finish you
	can more clearly express what you're intending to do than with
	$surf = undef.

	* examples/png-streams.pl: Fix indention.

2007-01-21	tsch

	* Cairo.pm, NEWS, README: Unstable release 1.031.

2007-01-21	tsch

	* Cairo.xs: Track upstream API change: cairo_get_dash_count
	returns the count directly; cairo_get_dash_count and
	cairo_get_dash don't return a status anymore.

2007-01-18	tsch

	* t/Cairo.t, Cairo.xs: Track upstream API improvement:
	cairo_copy_clip_rectangles -> cairo_copy_clip_rectangle_list.

2007-01-05	tsch

	* t/CairoSurface.t: Fix an endianness problem.

2006-12-30	tsch

	* MakeHelper.pm: Fix the valid-value lists in enum error messages.

2006-12-28	tsch

	* Cairo.pm, NEWS, README: Unstable release 1.030.

2006-12-28	tsch

	* Cairo.xs, cairo-perl.h, t/Cairo.t: Wrap and test
	cairo_copy_clip_rectangles and cairo_clip_extents.

2006-11-23	tsch

	* CairoSurface.xs, t/CairoSurface.t: Make
	Cairo::ImageSurface::get_data usable by specifying the buffer
	length.

	* MANIFEST, Makefile.PL, doctypes: Describe our types.

	* NEWS: Merge from stable-1-0.

2006-11-09	tsch

	* Cairo.xs, cairo-perl-private.h: Export cairo_perl_alloc_temp
	privately.

	* Cairo.xs: Remove the DOUBLES_ macros and inline them.  They were
	used only in one place.

	* Cairo.xs, t/Cairo.t: Wrap cairo_get_dash.

	* CairoPattern.xs, cairo-perl-private.h, t/CairoPattern.t: Wrap
	cairo_pattern_get_rgba, cairo_pattern_get_surface,
	cairo_pattern_get_color_stop_rgba, cairo_pattern_get_points, and