@@ -108,7 +108,7 @@ cairo_pattern_t_noinc * cairo_pattern_create_rgba (class, double red, double gre
 	cairo_perl_package_table_insert (RETVAL, "Cairo::SolidPattern");
 #endif
 
-#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 3, 0) /* FIXME: 1.4 */
+#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 4, 0)
 
 ## cairo_status_t cairo_pattern_get_rgba (cairo_pattern_t *pattern, double *red, double *green, double *blue, double *alpha);
 void cairo_pattern_get_rgba (cairo_pattern_t *pattern)
@@ -150,7 +150,7 @@ void cairo_pattern_set_filter (cairo_pattern_t * pattern, cairo_filter_t filter)
 
 cairo_filter_t cairo_pattern_get_filter (cairo_pattern_t * pattern);
 
-#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 3, 0) /* FIXME: 1.4 */
+#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 4, 0)
 
 ## cairo_status_t cairo_pattern_get_surface (cairo_pattern_t *pattern, cairo_surface_t **surface);
 cairo_surface_t * cairo_pattern_get_surface (cairo_pattern_t *pattern)
@@ -175,7 +175,7 @@ void cairo_pattern_add_color_stop_rgb (cairo_pattern_t *pattern, double offset, 
 
 void cairo_pattern_add_color_stop_rgba (cairo_pattern_t *pattern, double offset, double red, double green, double blue, double alpha);
 
-#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 3, 0) /* FIXME: 1.4 */
+#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 4, 0)
 
 ## cairo_status_t cairo_pattern_get_color_stop_count (cairo_pattern_t *pattern, int *count);
 ## cairo_status_t cairo_pattern_get_color_stop_rgba (cairo_pattern_t *pattern, int index, double *offset, double *red, double *green, double *blue, double *alpha);
@@ -219,7 +219,7 @@ cairo_pattern_t_noinc * create (class, double x0, double y0, double x1, double y
     OUTPUT:
 	RETVAL
 
-#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 3, 0) /* FIXME: 1.4 */
+#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 4, 0)
 
 ## cairo_status_t cairo_pattern_get_linear_points (cairo_pattern_t *pattern, double *x0, double *y0, double *x1, double *y1);
 void cairo_pattern_get_points (cairo_pattern_t *pattern)
@@ -253,7 +253,7 @@ cairo_pattern_t_noinc * create (class, double cx0, double cy0, double radius0, d
     OUTPUT:
 	RETVAL
 
-#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 3, 0) /* FIXME: 1.4 */
+#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 4, 0)
 
 ## cairo_status_t cairo_pattern_get_radial_circles (cairo_pattern_t *pattern, double *x0, double *y0, double *r0, double *x1, double *y1, double *r1)
 void cairo_pattern_get_circles (cairo_pattern_t *pattern)
